hledger/test/errors/tcclockouttime.timeclock
#!/usr/bin/env -S hledger check -f
# Clockout time before previous clockin.

i 2022/01/01 00:01:00 a
o 2022/01/01 00:00:00
